z-index fix for footer

--- a/baltimore-crime-stats/src/app/app-main/footer/footer.component.css
+++ b/baltimore-crime-stats/src/app/app-main/footer/footer.component.css
@@ -1,6 +1,8 @@
 .app-footer {
+    position: absolute;
     padding: 0rem;
     text-align: center;
-    z-index: 1000;
+    z-index: 100;
     border-top: 1px solid darkgray;
+    background-color: #ffffff;
 }
